create product card

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     
-    <header class="flex">
+    <header class="flex_bet">
 
-            <nav class="flex container">
+            <nav class="flex_bet container">
                 <ul class="menu">
                     <li><a href="" class=""></a>Donna</li>
                     <li><a href="" class=""></a>Uomo</li>
@@ -32,6 +32,77 @@
             </nav>
 
     </header>
+
+    <main class="list_product">
+        <div class="card">
+            <div class="product_image">
+                <img src="./img/1.webp" alt="man">
+            </div>
+            <div class="description_product">
+                <p class="brand">Levis</p>
+                <p class="model_name">Relaxed</p>
+                <p class="price">14,99 &euro;</p>
+            </div>
+        </div>
+
+        <!-- <div class="card">
+            <div class="product_image">
+                <img src="./img/1.webp" alt="man">
+            </div>
+            <div class="description_product">
+                <span class="brand">Levis</span>
+                <span class="model_name">Relaxed</span>
+                <span class="price">14,99 &euro;</span>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="product_image">
+                <img src="./img/1.webp" alt="man">
+            </div>
+            <div class="description_product">
+                <span class="brand">Levis</span>
+                <span class="model_name">Relaxed</span>
+                <span class="price">14,99 &euro;</span>
+            </div>
+        </div> -->
+
+
+        <!-- <div class="card">
+            <div class="product_image">
+                <img src="./img/1.webp" alt="man">
+            </div>
+            <div class="description_product">
+                <span class="brand">Levis</span>
+                <span class="model_name">Relaxed</span>
+                <span class="price">14,99 &euro;</span>
+            </div>
+        </div> -->
+
+        <!-- <div class="card">
+            <div class="product_image">
+                <img src="./img/1.webp" alt="man">
+            </div>
+            <div class="description_product">
+                <span class="brand">Levis</span>
+                <span class="model_name">Relaxed</span>
+                <span class="price">14,99 &euro;</span>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="product_image">
+                <img src="./img/1.webp" alt="man">
+            </div>
+            <div class="description_product">
+                <span class="brand">Levis</span>
+                <span class="model_name">Relaxed</span>
+                <span class="price">14,99 &euro;</span>
+            </div>
+        </div> -->
+
+
+    </main>
     
 </body>
 </html>
