--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <title>Boolando</title>
 </head>
 <body>
@@ -34,72 +38,59 @@
     </header>
 
     <main class="list_product">
-        <div class="card">
-            <div class="product_image">
-                <img src="./img/1.webp" alt="man">
+        <div class="card padding_bottom">
+            <div class="product">
+                <img class="product_img" src="./img/1.webp" alt="man">
+                <p class="brand font_small">Levis</p>
+                <p class="product_name">Relaxed fit tee unisex</p>
+                <p class="price">14,99 &euro;<span class="old_price">29,99 &euro;</span></p>
             </div>
-            <div class="description_product">
-                <p class="brand">Levis</p>
-                <p class="model_name">Relaxed</p>
+        </div>
+
+        <div class="card padding_bottom">
+            <div class="product">
+                <img class="product_img" src="./img/1.webp" alt="man">
+                <p class="brand font_small">Levis</p>
+                <p class="product_name">Relaxed</p>
                 <p class="price">14,99 &euro;</p>
             </div>
         </div>
 
-        <!-- <div class="card">
-            <div class="product_image">
-                <img src="./img/1.webp" alt="man">
-            </div>
-            <div class="description_product">
-                <span class="brand">Levis</span>
-                <span class="model_name">Relaxed</span>
-                <span class="price">14,99 &euro;</span>
+        <div class="card padding_bottom">
+            <div class="product">
+                <img class="product_img" src="./img/1.webp" alt="man">
+                <p class="brand font_small">Levis</p>
+                <p class="product_name">Relaxed</p>
+                <p class="price">14,99 &euro;</p>
             </div>
         </div>
 
         <div class="card">
-            <div class="product_image">
-                <img src="./img/1.webp" alt="man">
-            </div>
-            <div class="description_product">
-                <span class="brand">Levis</span>
-                <span class="model_name">Relaxed</span>
-                <span class="price">14,99 &euro;</span>
-            </div>
-        </div> -->
-
-
-        <!-- <div class="card">
-            <div class="product_image">
-                <img src="./img/1.webp" alt="man">
-            </div>
-            <div class="description_product">
-                <span class="brand">Levis</span>
-                <span class="model_name">Relaxed</span>
-                <span class="price">14,99 &euro;</span>
-            </div>
-        </div> -->
-
-        <!-- <div class="card">
-            <div class="product_image">
-                <img src="./img/1.webp" alt="man">
-            </div>
-            <div class="description_product">
-                <span class="brand">Levis</span>
-                <span class="model_name">Relaxed</span>
-                <span class="price">14,99 &euro;</span>
+            <div class="product">
+                <img class="product_img" src="./img/1.webp" alt="man">
+                <p class="brand font_small">Levis</p>
+                <p class="product_name">Relaxed fit tee unisex</p>
+                <p class="price">14,99 &euro;<span class="old_price">29,99 &euro;</span></p>
             </div>
         </div>
 
         <div class="card">
-            <div class="product_image">
-                <img src="./img/1.webp" alt="man">
+            <div class="product">
+                <img class="product_img" src="./img/1.webp" alt="man">
+                <p class="brand font_small">Levis</p>
+                <p class="product_name">Relaxed</p>
+                <p class="price">14,99 &euro;</p>
             </div>
-            <div class="description_product">
-                <span class="brand">Levis</span>
-                <span class="model_name">Relaxed</span>
-                <span class="price">14,99 &euro;</span>
+        </div>
+
+        <div class="card">
+            <div class="product">
+                <img class="product_img" src="./img/1.webp" alt="man">
+                <p class="brand font_small">Levis</p>
+                <p class="product_name">Relaxed</p>
+                <p class="price">14,99 &euro;</p>
             </div>
-        </div> -->
+        </div>
 
 
     </main>
