absolute and relative

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -28,10 +29,10 @@
                     </a>
                 </div>
                 
-                <ul class="">
-                    <li><a href="" class="account_icon"></a>Account</li>
-                    <li><a href="" class="favorites_icon"></a>Favorites</li>
-                    <li><a href="" class="checkout_icon"></a>Checkout</li>
+                <ul class="menu_user">
+                    <li><a href="" class="fa-solid fa-user"></a></li>
+                    <li><a href="" class="fa-regular fa-heart"></a></li>
+                    <li><a href="" class="fa-solid fa-bag-shopping"></a></li>
                 </ul>
             </nav>
 
@@ -39,56 +40,70 @@
 
     <main class="list_product">
         <div class="card padding_bottom">
-            <div class="product">
-                <img class="product_img" src="./img/1.webp" alt="man">
+            <div class="product p_relative">
+                <img class="product_img no_hover" src="./img/1.webp" alt="man">
                 <p class="brand font_small">Levis</p>
                 <p class="product_name">Relaxed fit tee unisex</p>
                 <p class="price">14,99 &euro;<span class="old_price">29,99 &euro;</span></p>
+                <p class="sustainability p_absolute">Sostenibilità</p>
+                <p class="discount p_absolute">-50%</p>
+                <p class="fav p_absolute">&hearts;</p>
+                
             </div>
         </div>
 
         <div class="card padding_bottom">
-            <div class="product">
-                <img class="product_img" src="./img/1.webp" alt="man">
+            <div class="product p_relative">
+                <img class="product_img" src="./img/2.webp" alt="man">
                 <p class="brand font_small">Levis</p>
                 <p class="product_name">Relaxed</p>
                 <p class="price">14,99 &euro;</p>
+                <p class="discount p_absolute">-30%</p>
+                <p class="fav p_absolute">&hearts;</p>
             </div>
         </div>
 
         <div class="card padding_bottom">
-            <div class="product">
-                <img class="product_img" src="./img/1.webp" alt="man">
+            <div class="product p_relative">
+                <img class="product_img" src="./img/3.webp" alt="man">
                 <p class="brand font_small">Levis</p>
                 <p class="product_name">Relaxed</p>
                 <p class="price">14,99 &euro;</p>
+                <p class="discount p_absolute">-30%</p>
+                <p class="fav p_absolute">&hearts;</p>
             </div>
         </div>
 
         <div class="card">
-            <div class="product">
-                <img class="product_img" src="./img/1.webp" alt="man">
+            <div class="product p_relative">
+                <img class="product_img" src="./img/4.webp" alt="man">
                 <p class="brand font_small">Levis</p>
                 <p class="product_name">Relaxed fit tee unisex</p>
                 <p class="price">14,99 &euro;<span class="old_price">29,99 &euro;</span></p>
+                <p class="sustainability p_absolute">Sostenibilità</p>
+                <p class="discount p_absolute">-50%</p>
+                <p class="fav p_absolute">&hearts;</p>
             </div>
         </div>
 
         <div class="card">
-            <div class="product">
-                <img class="product_img" src="./img/1.webp" alt="man">
+            <div class="product p_relative">
+                <img class="product_img" src="./img/5.webp" alt="man">
                 <p class="brand font_small">Levis</p>
                 <p class="product_name">Relaxed</p>
                 <p class="price">14,99 &euro;</p>
+                <p class="fav p_absolute">&hearts;</p>
             </div>
         </div>
 
         <div class="card">
-            <div class="product">
-                <img class="product_img" src="./img/1.webp" alt="man">
+            <div class="product p_relative">
+                <img class="product_img" src="./img/6.webp" alt="man">
                 <p class="brand font_small">Levis</p>
                 <p class="product_name">Relaxed</p>
+                <p class="sustainability_only p_absolute">Sostenibilità</p>
                 <p class="price">14,99 &euro;</p>
+                <p class="fav p_absolute">&hearts;</p>
             </div>
         </div>
 
