--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -19,20 +19,20 @@
 
             <nav class="flex_bet container">
                 <ul class="menu">
-                    <li><a href="" class=""></a>Donna</li>
-                    <li><a href="" class=""></a>Uomo</li>
-                    <li><a href="" class=""></a>Bambino</li>
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Bambino</a></li>
                 </ul>
                 <div class="logo">
-                    <a href="#">
+                    <a href="https://avatars.githubusercontent.com/u/3359943?v=4" target="_blank">
                         <img class="logo" src="./img/boolean-logo.png" alt="Boolean Logo">
                     </a>
                 </div>
                 
                 <ul class="menu_user">
-                    <li><a href="" class="fa-solid fa-user"></a></li>
-                    <li><a href="" class="fa-regular fa-heart"></a></li>
-                    <li><a href="" class="fa-solid fa-bag-shopping"></a></li>
+                    <li><a href="#" class="fa-solid fa-user"></a></li>
+                    <li><a href="#" class="fa-regular fa-heart"></a></li>
+                    <li><a href="#" class="fa-solid fa-bag-shopping"></a></li>
                 </ul>
             </nav>
 
@@ -41,8 +41,9 @@
     <main class="list_product">
         <div class="card padding_bottom">
             <div class="product p_relative">
-                <img class="product_img no_hover" src="./img/1.webp" alt="man">
-                <p class="brand font_small">Levis</p>
+                <img class="product_img" src="./img/1.webp" alt="man outfit">
+                <img class="product_img hover" src="./img/1b.webp" alt="man outfit">
+                <p class="brand font_small">Levi's</p>
                 <p class="product_name">Relaxed fit tee unisex</p>
                 <p class="price">14,99 &euro;<span class="old_price">29,99 &euro;</span></p>
                 <p class="sustainability p_absolute">Sostenibilità</p>
@@ -54,10 +55,11 @@
 
         <div class="card padding_bottom">
             <div class="product p_relative">
-                <img class="product_img" src="./img/2.webp" alt="man">
-                <p class="brand font_small">Levis</p>
-                <p class="product_name">Relaxed</p>
-                <p class="price">14,99 &euro;</p>
+                <img class="product_img" src="./img/2.webp" alt="woman outfit">
+                <img class="product_img hover" src="./img/2b.webp" alt="woman outfit">
+                <p class="brand font_small">Guess</p>
+                <p class="product_name">Rose Tea</p>
+                <p class="price">20,99 &euro;<span class="old_price">29,99 &euro;</span></p>
                 <p class="discount p_absolute">-30%</p>
                 <p class="fav p_absolute">&hearts;</p>
             </div>
@@ -65,9 +67,10 @@
 
         <div class="card padding_bottom">
             <div class="product p_relative">
-                <img class="product_img" src="./img/3.webp" alt="man">
-                <p class="brand font_small">Levis</p>
-                <p class="product_name">Relaxed</p>
+                <img class="product_img" src="./img/3.webp" alt="woman outfit">
+                <img class="product_img hover" src="./img/3b.webp" alt="woman outfit">
+                <p class="brand font_small">Come Zucchero Filato</p>
+                <p class="product_name">Voglia di colori pastello</p>
                 <p class="price">14,99 &euro;</p>
                 <p class="discount p_absolute">-30%</p>
                 <p class="fav p_absolute">&hearts;</p>
@@ -76,9 +79,10 @@
 
         <div class="card">
             <div class="product p_relative">
-                <img class="product_img" src="./img/4.webp" alt="man">
-                <p class="brand font_small">Levis</p>
-                <p class="product_name">Relaxed fit tee unisex</p>
+                <img class="product_img" src="./img/4.webp" alt="man outfit">
+                <img class="product_img hover" src="./img/4b.webp" alt="man outfit">
+                <p class="brand font_small">Levi's</p>
+                <p class="product_name">Tee unisex</p>
                 <p class="price">14,99 &euro;<span class="old_price">29,99 &euro;</span></p>
                 <p class="sustainability p_absolute">Sostenibilità</p>
                 <p class="discount p_absolute">-50%</p>
@@ -88,19 +92,21 @@
 
         <div class="card">
             <div class="product p_relative">
-                <img class="product_img" src="./img/5.webp" alt="man">
-                <p class="brand font_small">Levis</p>
-                <p class="product_name">Relaxed</p>
-                <p class="price">14,99 &euro;</p>
+                <img class="product_img" src="./img/5.webp" alt="woman outfit">
+                <img class="product_img hover" src="./img/5b.webp" alt="woman outfit">
+                <p class="brand font_small">Maya Deluxe</p>
+                <p class="product_name">Stripe bodice</p>
+                <p class="price">99,99 &euro;</p>
                 <p class="fav p_absolute">&hearts;</p>
             </div>
         </div>
 
         <div class="card">
             <div class="product p_relative">
-                <img class="product_img" src="./img/6.webp" alt="man">
-                <p class="brand font_small">Levis</p>
-                <p class="product_name">Relaxed</p>
+                <img class="product_img" src="./img/6.webp" alt="woman outfit">
+                <img class="product_img hover" src="./img/6b.webp" alt="woman outfit">
+                <p class="brand font_small">Esprit</p>
+                <p class="product_name">Maglione - Black</p>
                 <p class="sustainability_only p_absolute">Sostenibilità</p>
                 <p class="price">14,99 &euro;</p>
                 <p class="fav p_absolute">&hearts;</p>
